--- a/about-me.html
+++ b/about-me.html
@@ -10,7 +10,7 @@
             <li>Performing Live with my Band</li>
             <li>Video Games</li>
         </ul>
-        <span>git pull origin mainThis is my favorite Website`&nbsp;</span>
+        <span>This is my favorite Website`&nbsp;</span>
         <a href ="https://www.amazon.com/">www.amazon.com</a>
     </body>
 </header>        
